@@ -85,14 +85,14 @@ TestCase {
         pageStack.push(tabs);
         compare(pageStack.currentPage, tabs, "Tabs can be pushed on a PageStack");
         compare(tabs.active, true, "Tabs on top of a PageStack are active");
-        compare(mainView.__propagated.header.contents, tabs.__headerContents, "Pushing Tabs on PageStack updates the header contents");
+        compare(mainView.__propagated.header.contents, tabs.tabBar, "Pushing Tabs on PageStack updates the header contents");
         pageStack.push(page1);
         compare(pageStack.currentPage, page1, "A page can be pushed on top of a Tabs");
         compare(tabs.active, false, "Tabs on a PageStack, but not on top, are inactive");
         compare(mainView.__propagated.header.contents, null, "Contents of inactive Tabs is not applied to header");
         pageStack.pop();
         compare(tabs.active, true, "Tabs on top of PageStack is active");
-        compare(mainView.__propagated.header.contents, tabs.__headerContents, "Active Tabs controls header contents");
+        compare(mainView.__propagated.header.contents, tabs.tabBar, "Active Tabs controls header contents");
         pageStack.clear();
     }
 
