@@ -40,6 +40,8 @@ API Changes
 * DEPRECATED IN Action: property Item itemHint
 * DEPRECATED: ToolbarActions component (use ToolbarItems instead)
 * ADDED IN MainView: property bool anchorToKeyboard
+* CHANGED IN Tabs: property Component __headerContents TO property TabBar tabBar
+* CHANGED IN Header: property Component contents TO property Item contents
 
 Compatibility Breaks
 ********************
